# sir-data-scrapper

./: .gitignore  LICENSE  README.md  RELEASE.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
docs/: CHANGELOG.md  design.md
scraper/: __init__.py  checkpoint.py  crawler.py  db_loader.py  downloader.py  extractor.py  logger.py  parser.py  pipeline.py  translator.py  utils.py
tests/: __init__.py
